# tetra-data

./: .env  Cargo.toml  LICENSE  flake.nix
.sqlx/: query-1167e2cddecea813097fcdc73eb31a4bad9eca94150d88dfd34e2c7c9cd90fcf.json  query-15efab2258474871c83345625965d51fc4d40b983a0302161575e5d7eda001d4.json  query-21e37de406cfe976ea7adb5bf3df75cc220a3bc72a8402d2818b7f9eb2abf76c.json  query-22f213df2ef275194dc5a088d598913046f56e778711707270ad58854bde1f00.json  query-3f454c0fe599edd8c989224e9e404309523fd533a2a7636f73165a9cee6969fe.json  query-46e581b66a04fe230779993c193f63a31f83282cd08b9e4c0c6ff1233e111237.json  query-5ece6f2027e48c388e3d9d9d86c6088757adcab973380108ed80add150459c4e.json  query-75baf5955ee778f998ba9349d041133c3cc5adcd32515d97d11b6f140d10dbcf.json  query-7d627d8dcee7e7b2ff9454deb31596043e6c351a29976fb388a3e2f476274523.json  query-9667fad8d79d48d5306cd6c1884111ad2eccd0288c67834bf1f167a39c3eefa7.json  query-a31c7a796ebd83b24e260ed70bd17ceae4cfdac9dfa87842c9eee084e3a0d15c.json  query-a5dfe63315b47aca32ae96c8eb47078167e20b2b2c5e9158664786138b2744c9.json  query-d8f10200129a97952be76c5c32efb34b527d505b0146f141bd083fa31c9a410a.json  query-e2ee983bf73de113e1046c5719fddb13957f36ddde41cc2d981606ce4f770aa1.json
migrations/: 20241023020716_init.sql  20241024002933_match.sql
src/: api.rs  crawl_league.rs  fetch_league.rs  fetch_replays.rs  leaderboard.rs  league.rs  main.rs  model.rs  replay.rs
