[package]
name = "tetra-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
dotenvy = "0.15.7"
hex = "0.4.3"
reqwest = { version = "0.12.8", features = ["gzip", "json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1.41.0", features = ["full"] }
