[package]
name = "tetra-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.12.8", features = ["gzip", "json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
zstd = "0.13.2"
